// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomText renders correctly with text 1`] = `
<Text
  allowFontScaling={false}
  style={
    Array [
      undefined,
      Object {
        "color": "#fff",
        "fontFamily": "sora-medium",
        "fontSize": 12,
        "textDecorationLine": "none",
      },
    ]
  }
>
  Hello, degeloper
</Text>
`;

exports[`CustomText renders correctly with text and bold-type 1`] = `
<Text
  allowFontScaling={false}
  style={
    Array [
      undefined,
      Object {
        "color": "#fff",
        "fontFamily": "sora-bold",
        "fontSize": 12,
        "textDecorationLine": "none",
      },
    ]
  }
>
  Hello, degeloper
</Text>
`;

exports[`CustomText renders correctly with text and medium-type 1`] = `
<Text
  allowFontScaling={false}
  style={
    Array [
      undefined,
      Object {
        "color": "#fff",
        "fontFamily": "sora-medium",
        "fontSize": 12,
        "textDecorationLine": "none",
      },
    ]
  }
>
  Hello, degeloper
</Text>
`;

exports[`CustomText renders correctly with text and regular-type 1`] = `
<Text
  allowFontScaling={false}
  style={
    Array [
      undefined,
      Object {
        "color": "#fff",
        "fontFamily": "sora-regular",
        "fontSize": 12,
        "textDecorationLine": "none",
      },
    ]
  }
>
  Hello, degeloper
</Text>
`;

exports[`CustomText renders correctly with white text 1`] = `
<Text
  allowFontScaling={false}
  style={
    Array [
      undefined,
      Object {
        "color": "#fff",
        "fontFamily": "sora-bold",
        "fontSize": 12,
        "textDecorationLine": "none",
      },
    ]
  }
>
  Hello, degeloper
</Text>
`;
